--- a/public/index.html
+++ b/public/index.html
@@ -2,47 +2,27 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
 
-        <meta name="description" content="Ethan Ratnofsky's personal website for showcasing personal achievements and projects.">
-
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <meta name="description" content="Ethan Ratnofsky's personal website for showcasing personal experiences, projects, and achievements.">
 
         <!-- Search Engine Optimization Meta Tags -->
-        <meta name="keywords" content="ethan, ratnofsky, personal, website, portfolio, resume, projects, achievements" >
+        <meta name="keywords" content="ethan, ratnofsky, personal, website, portfolio, resume, projects, achievements, experience, programming, software, engineer, coding" >
         
         <title>Ethan Ratnofsky</title>
-
-        <!-- Start Single Page Apps for GitHub Pages -->
-        <script type="text/javascript">
-            // Single Page Apps for GitHub Pages
-            // MIT License
-            // https://github.com/rafgraph/spa-github-pages
-            // This script checks to see if a redirect is present in the query string,
-            // converts it back into the correct url and adds it to the
-            // browser's history using window.history.replaceState(...),
-            // which won't cause the browser to attempt to load the new url.
-            // When the single page app is loaded further down in this file,
-            // the correct url will be waiting in the browser's history for
-            // the single page app to route accordingly.
-            (function(l) {
-            if (l.search[1] === '/' ) {
-                var decoded = l.search.slice(1).split('&').map(function(s) { 
-                return s.replace(/~and~/g, '&')
-                }).join('?');
-                window.history.replaceState(null, null,
-                    l.pathname.slice(0, -1) + decoded + l.hash
-                );
-            }
-            }(window.location))
-        </script>
-        <!-- End Single Page Apps for GitHub Pages -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
+        <div id="app"></div>
     </body>
 </html>
